# SDH-PlayTime-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/db/: connection.rs  migrations.rs  mod.rs
crates/core/src/db/dao/: games.rs  mod.rs  statistics.rs  time_tracking.rs
crates/core/src/domain/: games.rs  mod.rs  statistics.rs  time_tracking.rs
crates/core/src/models/: game.rs  mod.rs  session.rs  statistics.rs
crates/core/src/utils/: mod.rs  time.rs
crates/pyo3/: Cargo.toml  playtime_rs.pyi  pyproject.toml
crates/pyo3/src/: db.rs  lib.rs  playtime.rs  user_manager.rs
crates/pyo3/tests/: main_test.py
crates/server/: Cargo.toml
