[package]
name = "playtime-pyo3"
version = "0.1.0"
edition = "2024"
description = "Python bindings via PyO3"

[lib]
name = "playtime_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4"
parking_lot = "0.12.5"
playtime-core = { path = "../core" }
pyo3 = { version = "0.27.2", features = ["extension-module", "chrono"] }
pyo3-stub-gen = "0.17.2"
pyo3-stub-gen-derive = "0.17.2"
